--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>A Lay - Portfolio</title>
-    <meta name="description" content="DPhil student at Oxford studying Machine Learning and AI Safety">
+    <meta name="description" content="Bachelor student at UNISQ studying Math/Statistics and Artificial Intelligence">
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300;400;500;600;700&display=swap" rel="stylesheet">
