--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
             <!-- Title -->
             <div class="header-title">
-                <span class="text-xl font-bold sm:text-2xl">J Rosser</span>
+                <span class="text-xl font-bold sm:text-2xl">A Lay</span>
             </div>
 
             <!-- Desktop Navigation -->
@@ -103,7 +103,7 @@
 
     <!-- Footer -->
     <div class="mx-auto max-w-3xl px-4 sm:px-8 py-8 text-center text-sm opacity-75">
-        <p>Built from scratch by me and Claude :)</p>
+        <p>Hello World!</p>
     </div>
 
     <script src="script.js"></script>
