--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>A Lay - Portfolio</title>
+    <title>Anthony Lay - Portfolio</title>
     <meta name="description" content="Bachelor student at UNISQ studying Math/Statistics and Artificial Intelligence">
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
     <link rel="stylesheet" href="styles.css">
